create home view

--- a/jpashop/jpashop/src/main/resources/application.yml
+++ b/jpashop/jpashop/src/main/resources/application.yml
@@ -12,6 +12,9 @@ spring:
       hibernate:
         show_sql: true
         format_sal: true
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
 
 logging:
   level:
